add statuses for Message & update docs
